# Smart-PromptCreator

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
launchers/macos/: launcher.c
launchers/macos/SMART PromptCreator.app/Contents/: Info.plist
launchers/macos/SMART PromptCreator.app/Contents/MacOS/: launcher
launchers/macos/SMART PromptCreator.app/Contents/Resources/: app-icon.icns  smart-promptcreator-icon.icns
launchers/windows/: Start-SMART-PromptCreator.vbs
license-server/: index.ts
scripts/: create-macos-launcher.mjs
server/: local-server.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnthropicApiKeyManager.tsx  CategoryNav.tsx  HelpPanel.tsx  PromptEditor.tsx  PromptList.tsx  SettingsPanel.tsx
src/db/: database.ts
src/hooks/: useTheme.ts
src/services/: anthropicService.ts  licenseService.ts  localProxy.ts  ollamaService.ts  openaiService.ts  optimizerService.ts  promptService.ts
src/store/: useAppStore.ts
src/types/: domain.ts
src/utils/: crypto.ts
