[package]
name = "smart-prompt-creator"
version = "0.1.0"
description = "Local-first KI Prompt Manager"
authors = ["Smart Prompt Creator"]
edition = "2021"

[lib]
name = "smart_prompt_creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
